Add sponsor email to cfp, add cfp link to index

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -20,7 +20,7 @@ import Card from '../components/card';
  ### Format
 
  Sessions: 50 minutes in length
- 
+
  Workshops: If you are interested in giving a workshop, please contact us directly at info@javascriptandfriends.com
 
  ### Themes and Levels of Expertise
@@ -76,7 +76,7 @@ import Card from '../components/card';
  please contact info@javascriptandfriends.com.
 
  If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
- Contact info@javascriptandfriends.com for more info!
+ Contact sponsor@javascriptandfriends.com for more info!
 
 ### New Speakers!
 
