--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -1,3 +1,7 @@
+import { Link } from 'gatsby'
+import Layout from '../components/layout'
+import Card from '../components/card';
+<Card>
 ## Code of Conduct
 
 The JavaScript and Friends Conference (JS&Friends) is a not-for-profit conference, 
@@ -89,3 +93,5 @@ We value your attendance.
 
 Any changes to code of conduct will be updated by event organizers.
 Forked from https://us.pycon.org/2019/about/code-of-conduct/
+
+</Card>
