Linkifying an email address

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -21,7 +21,7 @@ import Card from '../components/card';
 
  Sessions: 50 minutes in length
 
- Workshops: If you are interested in giving a workshop, please contact us directly at info@javascriptandfriends.com
+ Workshops: If you are interested in giving a workshop, please contact us directly at [info@javascriptandfriends.com](info@javascriptandfriends.com)
 
  ### Themes and Levels of Expertise
 
