Adding links to...links

--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -21,7 +21,7 @@ import Card from '../components/card';
 
  Sessions: 50 minutes in length
 
- Workshops: If you are interested in giving a workshop, please contact us directly at [info@javascriptandfriends.com](info@javascriptandfriends.com)
+ Workshops: If you are interested in giving a workshop, please contact us directly at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
 
  ### Themes and Levels of Expertise
 
@@ -64,7 +64,7 @@ import Card from '../components/card';
  If you have any special needs or circumstances we should know about, please contact us as early as possible,
  but no later than 04/11/2019! A special need might include (but certainly isn’t limited to)
  an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
- Please contact us at info@javascriptandfriends.com.
+ Please contact us at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
 
  ### Financial Assistance
 
@@ -73,18 +73,19 @@ import Card from '../components/card';
  diverse group of speakers.
 
  If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
- please contact info@javascriptandfriends.com.
+ please contact <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
 
  If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
- Contact sponsor@javascriptandfriends.com for more info!
+ Contact <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a> for more info!
 
 ### New Speakers!
 
 Welcome to speaking! If you are looking for some written guidance, CodeMash offers excellent advice
-in their Call for Speakers.
+in their <a href="http://www.codemash.org/call-speakers/" target="_blank" rel="noopener noreferrer">Call for Speakers</a>.
 
 We specifically recommend the section entitled “How to write a good submission.”
 
 If you would like a human mentor, we can help connect you with a mentor.
-Please let us know at info@javascriptandfriends.com
+Please let us know at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+
 </Card>
