Updated link for report email address

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -84,7 +84,7 @@ conference volunteers immediately.
 
 #### Incident Report Hotline
 
-report@javascriptandfriends.com
+<a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>
 
 In case of a conflict of interest, you can individually contact 
 conference organizing committee. We will be happy to help participants 
