Update Code of Conduct

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -6,65 +6,28 @@ import Card from '../components/card';
 
 ## Code of Conduct
 
-The JavaScript and Friends Conference (JS&Friends) is a not-for-profit conference, 
-organized by a team of volunteers. We are all active or aspiring software professionals, 
-and we are excited to bring together a diverse group of JavaScript enthusiasts and friends 
-to learn and network. 
+Welcome to the JS&Friends Code of Conduct. This Code of Conduct is a set of guidelines,
+essentially, about what kinds of behavior will not be tolerated within spaces related
+to JS&Friends. We have a Code of Conduct because it is necessary, and because it is part
+of our effort to create a safe and harassment-free conference experience. Those violating
+this Code of Conduct may be warned or even asked to leave the event.
 
-With this conference, we want to contribute to the cultivation of a welcoming, inclusive, 
-and dynamic tech scene throughout the Midwestern United States, and beyond!
+### Who and what is bound by this Code of Conduct?
 
-We value the participation of each member of the developer community and want all attendees 
-to have an enjoyable and fulfilling experience.
-
-Accordingly, all attendees are expected to show respect and courtesy to other attendees 
-throughout the conference and at all conference events.
-
-To make clear what is expected, all attendees, speakers, sponsors staff, 
-organizers and volunteers at the conference are required to conform to the 
-following Code of Conduct.
-
-Organizers will enforce this code throughout the event.
-
-### Our Standards
-
-JS&Friends provides a positive conference experience for everyone, regardless of age, 
-gender identity and expression, sexual orientation, disability, physical appearance, body size,
-ethnicity, nationality, race, or religion (or lack thereof), education, 
-or socio-economic status.
-
-We expect all to be kind to others, behave professionally, use welcoming and inclusive language 
-and treat everyone with respect and welcome diverse opinions and viewpoints and show empathy 
-towards others.
-
-Using offensive verbal comments related to gender, age, sexual orientation, disability, 
-physical appearance, body size, race, religion, sexual images in public spaces, 
-deliberate intimidation, stalking, following, harassing photography or recording, 
-sustained disruption of talks or other events, inappropriate physical contact, 
-insults or put downs, Sexist, racist, homophobic, transphobic, ableist, 
-or exclusionary jokes and conduct that is inappropriate for a professional audience 
-including people of many different backgrounds, inappropriate social media posts in Twitter,
-LinkedIn or Internet, usage of sexualized clothing/uniforms/costumes, or otherwise create a
-sexualized environment will be treated as Harassment.
-
-Participants asked to stop any harassing behavior are expected to comply immediately.
-
-If a participant engages in behavior that violates this code of conduct, 
-the conference organizers may take any action they deem appropriate, 
-including warning the offender or expulsion from the conference with no refund.
-
-We expect all conference attendees, venue staff, volunteers, sponsors staff, 
-speakers and organizers to comply with this anti-harassment policy.
-
-Thank you for helping make this a welcoming, friendly event for all.
+Everyone involved with JS&Friends is expected to adhere to this Code of Conduct.
+This includes, but isn’t limited to, attendees, volunteers, vendors, guests. The
+Code of Conduct applies to both online and in-person communication, and includes,
+for example, things like slides, emails, forums, booths, stickers, clothing, social
+media, and recorded talks. Anyone who violates this code of conduct may be sanctioned
+or expelled from these spaces at the discretion of the JS&Friends organizing committee.
 
 ### Weapons Policy
 
-No weapons are allowed at conference venues, including but not limited to explosives 
-(including fireworks), guns, and large knives such as those used for hunting or display, 
+No weapons are allowed at conference venues, including but not limited to explosives
+(including fireworks), guns, and large knives such as those used for hunting or display,
 as well as any other item used for the purpose of causing injury or harm to others.
 
-Anyone seen in possession of one of these items will be asked to leave immediately 
+Anyone seen in possession of one of these items will be asked to leave immediately
 and will only be allowed to return without the weapon.
 
 ### No-Alcohol Policy
@@ -73,27 +36,83 @@ We expect all to comply with No-Alcohol policy at conference venue or workshop.
 
 Attendees are further expected to comply with all state and local laws on this matter.
 
-This code of conduct is applicable to all conference attendees, venue staff, 
+This code of conduct is applicable to all conference attendees, venue staff,
 volunteers, sponsors staff, speakers and organizers.
 
-### Contact Information
+### What is unacceptable behavior?
 
-If you believe that someone is violating the code of conduct during the conference or 
-related events, or have any other concerns, please contact a member of the 
-conference volunteers immediately.
+Those involved with JS&Friends are expected to comply with both the letter and
+the spirit of this Code of Conduct, and are expected to contribute to the creation
+and maintenance of a harassment-free space.
 
-#### Incident Report Hotline
+Harassment includes:
+ - Offensive comments related to gender, gender identity and expression, sexual orientation, disability, mental illness, neuro(a)typicality, physical appearance, body size, age, race, or religion.
+ - Unwelcome comments regarding a person’s lifestyle choices and practices, including those related to food, health, parenting, drugs, technology, level of experience, career, career stage, and employment.
+ - Deliberate misgendering or use of ‘dead’ or rejected names.
+ - Gratuitous or off-topic sexual images or behaviour in spaces where they’re not appropriate.
+ - Physical contact and simulated physical contact (eg, textual descriptions like “*hug*” or “*backrub*”) without consent or after a request to stop.
+ - Violence or threats of violence.
+ - Incitement of violence towards any individual, including encouraging a person to commit suicide or to engage in self-harm.
+ - Deliberate intimidation.
+ - Stalking or following.
+ - Harassing photography or recording, including logging online activity for harassment purposes.
+ - Sustained disruption of discussion.
+ - Unwelcome sexual attention.
+ - Pattern of inappropriate social contact, such as requesting/assuming inappropriate levels of intimacy with others
+ - Continued one-on-one communication after requests to cease.
+ - Deliberate “outing” of any aspect of a person’s identity without their consent except as necessary to protect vulnerable people from intentional abuse.
+ - Publication of non-harassing private communication.
 
-<a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>
 
-In case of a conflict of interest, you can individually contact 
-conference organizing committee. We will be happy to help participants 
-contact hotel/venue security or local law enforcement, provide escorts, or 
-otherwise assist any attendee to feel safe for the duration of the conference.
+ Danger is not the same as discomfort. JS&Friends prioritizes marginalized
+ people’s safety over privileged people’s comfort. JS&Friends reserves the right
+ not to act on complaints regarding:
+ - ‘Reverse’ -isms, including ‘reverse racism,’ ‘reverse sexism,’ and ‘cisphobia’
+ - Reasonable communication of boundaries, such as “leave me alone,” “go away,” or “I’m not discussing this with you”
+ - Communicating in a ‘tone’ you don’t find congenial
+ - Criticizing racist, sexist, cissexist, or otherwise oppressive behavior or assumptions
 
-We value your attendance. 
+### What if someone breaks the Code of Conduct?
+
+If you are being harassed, or if you notice that someone else is being harassed,
+or if you have any other concerns, please contact the JS&Friends organizers. If
+the person who is harassing you is on the team, they will recuse themselves from
+handling your incident. We will respond as promptly as we can. If a participant
+asks you to cease a harassing behavior, do so immediately and respectfully.
+
+If a participant engages in harassing behavior, JS&Friends may take any action
+they deem appropriate, up to and including permanent expulsion from all JS&Friends
+spaces and identification of the participant as a harasser to other JS&Friends
+members or the general public.
+
+### How do I report violations?
+
+JS&Friends organizers are available via email at
+<a href="mailto:report@javascriptandfriends.com">report@javascriptandfriends.com</a>.
+During the conference, we will be wearing something identifiable, likely a name
+tag or a t-shirt. We will respond as quickly as we can.
+
+When you report a violation of the Code of Conduct, we pledge to ensure your
+privacy during the report, we pledge to keep both the reporters’ and the victims’
+information confidential (unless you explicitly agree otherwise). We pledge, if
+appropriate, to help you escalate the report to the applicable authorities, such
+as venue management, law enforcement, etc.
+
+At our discretion, we may publicly name a person about whom we’ve received
+harassment complaints, or privately warn third parties about them, if we believe
+that doing so will increase the safety of JS&Friends participants the general
+public. Additionally, in order to protect volunteers from abuse and burnout, we
+reserve the right to reject any report we believe to have been made in bad faith.
+
+### What sources did you use for this Code of Conduct?
+
+For much of this document, we remixed GeekFeminism’s
+<a href="https://geekfeminism.org/about/code-of-conduct/">Code of Conduct</a> and
+<a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">Code of Conduct for conferences</a>.
+We drew inspiration from <a href="https://www.afrotechfest.co.uk/coc/">Afrotech Fest 2019</a>,
+<a href="https://codeandsupply.co/policies/conduct">Code & Supply</a>, and
+<a href="http://confcodeofconduct.com/">Conference Code of Conduct.</a>
 
 Any changes to code of conduct will be updated by event organizers.
-Forked from https://us.pycon.org/2019/about/code-of-conduct/
 
 </Card>
