Updated call for sponsors
Call for sponsors included styling

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -1,6 +1,11 @@
+import { Link } from 'gatsby'
+import Layout from '../components/layout'
+import Card from '../components/card';
+
+<Card>
 ## Interested in Sponsoring !!
 
-![An image](./sponsor.png)
+![An image](sponsor.png)
 
 We are a new volunteer-run developer conference coming to the Columbus, OH area with a focus on JavaScript based technologies. It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, August 2, 2019! Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive, and dynamic tech scene throughout the mid-west and beyond.
 
@@ -20,3 +25,4 @@ Here's your chance to contribute to that mission! We're looking for the best com
 
   We can work together to come up with a custom sponsorship package that will work for you! 
 
+</Card>
