Updated removed image.

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -3,13 +3,20 @@ import Layout from '../components/layout'
 import Card from '../components/card';
 
 <Card>
+
 ## Interested in Sponsoring !!
 
-![An image](sponsor.png)
+We are a new volunteer-run developer conference coming to the Columbus, OH area with a focus on JavaScript based technologies. 
+It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, August 2, 2019! 
+Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts 
+and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive, 
+and dynamic tech scene throughout the mid-west and beyond.
 
-We are a new volunteer-run developer conference coming to the Columbus, OH area with a focus on JavaScript based technologies. It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, August 2, 2019! Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive, and dynamic tech scene throughout the mid-west and beyond.
+Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the 
+First Annual JavaScript and Friends Conference a success. And with your contribution, it will be! 
 
-Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the First Annual JavaScript and Friends Conference a success. And with your contribution, it will be! Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers in bringing this about.
+Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
+in bringing this about.
 
 <a href="https://1drv.ms/b/s!AqhcZadKop7eiy-K__Qs6ZmkqFVg" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
 
