--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -1,10 +1,13 @@
 import { Link } from 'gatsby'
 import Layout from '../components/layout'
 import Card from '../components/card';
+import sponsorImage from './sponsor.png';
 
 <Card>
 
 ## Interested in Sponsoring !!
+
+<img src={sponsorImage}/>
 
 We are a new volunteer-run developer conference coming to the Columbus, OH area with a focus on JavaScript based technologies. 
 It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, August 2, 2019! 
