--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -1,82 +1,81 @@
-import { Link } from 'gatsby'
-import Layout from '../components/layout'
-import Card from '../components/card';
+import { Link } from "gatsby";
+import Layout from "../components/layout";
+import Card from "../components/Card";
 
 <Card>
 
- ## Call for Speakers
+## Call for Speakers
 
- ### Important Info!
+### Important Info!
 
- All submissions and applicants are expected to abide by our Code of Conduct.
- Please read this Call for Proposals thoroughly. Please don’t hesitate to ask questions!
+All submissions and applicants are expected to abide by our Code of Conduct.
+Please read this Call for Proposals thoroughly. Please don’t hesitate to ask questions!
 
- ### Who Should Apply?
+### Who Should Apply?
 
- You! We welcome speakers of all experience levels and backgrounds.
- Your technical AND non-technical experience is valuable to the community!
- There is no limit on the number of proposals you can submit.
+You! We welcome speakers of all experience levels and backgrounds.
+Your technical AND non-technical experience is valuable to the community!
+There is no limit on the number of proposals you can submit.
 
- ### Format
+### Format
 
- Sessions: 50 minutes in length
+Sessions: 50 minutes in length
 
- Workshops: If you are interested in giving a workshop, please contact us directly at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+Workshops: If you are interested in giving a workshop, please contact us directly at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
 
- ### Themes and Levels of Expertise
+### Themes and Levels of Expertise
 
- We are looking for talks at all experience levels.
+We are looking for talks at all experience levels.
 
- Technical Skills: Your talk doesn’t have to relate to JavaScript, but it’s more likely to be accepted if it does.
- That said, use your imagination! We are a diverse group with diverse interests!
+Technical Skills: Your talk doesn’t have to relate to JavaScript, but it’s more likely to be accepted if it does.
+That said, use your imagination! We are a diverse group with diverse interests!
 
- Professional/Human Skills: Sometimes called “soft skills,” these talks don’t need to be related to JavaScript at all.
- We look to these talks to help us become better communicators, contributors, mentors, and general humans.
+Professional/Human Skills: Sometimes called “soft skills,” these talks don’t need to be related to JavaScript at all.
+We look to these talks to help us become better communicators, contributors, mentors, and general humans.
 
- Rather than specifying themes, we’d like to share what we hope your talk would do for the audience.
+Rather than specifying themes, we’d like to share what we hope your talk would do for the audience.
 
- Your talk could:
-  * Help solve a common challenge or sharpen our skills
-  * Alert us to new or neglected challenges
-  * Present us with new, important information
-  * Make our daily lives easier
-  * Help us achieve better work/life balance
-  * Encourage or guide new developers
-  * Show experienced professionals how to lift up new and aspiring developers
-  * Demonstrate something unique or entertaining
+Your talk could:
 
+- Help solve a common challenge or sharpen our skills
+- Alert us to new or neglected challenges
+- Present us with new, important information
+- Make our daily lives easier
+- Help us achieve better work/life balance
+- Encourage or guide new developers
+- Show experienced professionals how to lift up new and aspiring developers
+- Demonstrate something unique or entertaining
 
- ### Speaker Selection Process
+### Speaker Selection Process
 
- 1. You read through this Call for Proposals (reach out if you need help or have questions!) (required)
- 1. You submit a completed application by 04/11/2019 (required)
- 1. You submit a completed Community Assistance form by 04/11/2019 (optional, see “Financial Assistance” section)
- 1. We send out the first round of speaker acceptance emails by 04/30/2019
- 1. We send out the second round of speaker acceptance emails by 05/10/2019
- 1. You request feedback on your proposal by 06/05/2019 (optional)
- 1. We see you at the conference on 08/02/2019!
+1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)
+1.  You submit a completed application by 04/11/2019 (required)
+1.  You submit a completed Community Assistance form by 04/11/2019 (optional, see “Financial Assistance” section)
+1.  We send out the first round of speaker acceptance emails by 04/30/2019
+1.  We send out the second round of speaker acceptance emails by 05/10/2019
+1.  You request feedback on your proposal by 06/05/2019 (optional)
+1.  We see you at the conference on 08/02/2019!
 
+### Speaker Perks & Accommodations
 
- ### Speaker Perks & Accommodations
+Speakers will receive a free admission to JS&Friends Conf.
 
- Speakers will receive a free admission to JS&Friends Conf.
+If you have any special needs or circumstances we should know about, please contact us as early as possible,
+but no later than 04/11/2019! A special need might include (but certainly isn’t limited to)
+an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
+Please contact us at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
 
- If you have any special needs or circumstances we should know about, please contact us as early as possible,
- but no later than 04/11/2019! A special need might include (but certainly isn’t limited to)
- an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
- Please contact us at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
+### Financial Assistance
 
- ### Financial Assistance
+In order to keep admission prices as low as possible for our first year, we strongly encourage speakers
+to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
+diverse group of speakers.
 
- In order to keep admission prices as low as possible for our first year, we strongly encourage speakers
- to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
- diverse group of speakers.
+If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
+please contact <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
 
- If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
- please contact <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
-
- If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
- Contact <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a> for more info!
+If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
+Contact <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a> for more info!
 
 ### New Speakers!
 
@@ -88,6 +87,6 @@ We specifically recommend the section entitled “How to write a good submission
 If you would like a human mentor, we can help connect you with a mentor.
 Please let us know at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
 
-<a href="https://sessionize.com/javascript-and-friends-conference/" target="_blank" rel="noopener noreferrer">Submit Proposals</a> 
+<a href="https://sessionize.com/javascript-and-friends-conference/" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 
 </Card>
