--- a/src/pages/callforspeakers.mdx
+++ b/src/pages/callforspeakers.mdx
@@ -2,7 +2,7 @@ import { Link } from "gatsby";
 import Layout from "../components/layout";
 import Card from "../components/Card";
 
-<Card>
+<Card mx="10%" my="48px">
 
 ## Call for Speakers
 
