--- a/src/pages/speak.mdx
+++ b/src/pages/speak.mdx
@@ -8,7 +8,7 @@ import Card from "../components/Card";
 
 ### Important Info!
 
-All submissions and applicants are expected to abide by our Code of Conduct.
+All submissions and applicants are expected to abide by our <Link to="/codeofconduct">Code of Conduct</Link>.
 Please read this Call for Proposals thoroughly. Please don’t hesitate to ask questions!
 
 ### Who Should Apply?
@@ -17,11 +17,13 @@ You! We welcome speakers of all experience levels and backgrounds.
 Your technical AND non-technical experience is valuable to the community!
 There is no limit on the number of proposals you can submit.
 
+We are prioritizing first-time conference speakers this year. It's our first time to plan a conference, so let it be your first time to speak!
+
 ### Format
 
-Sessions: 50 minutes in length
+Sessions: 25 minutes long, with no Q&A after. Be sure to let the audience know during your talk if you will be available at another time that day to answer questions!
 
-Workshops: If you are interested in giving a workshop, please contact us directly at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+Workshops: If you are interested in giving a workshop, please contact us via <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>
 
 ### Themes and Levels of Expertise
 
@@ -33,7 +35,7 @@ That said, use your imagination! We are a diverse group with diverse interests!
 Professional/Human Skills: Sometimes called “soft skills,” these talks don’t need to be related to JavaScript at all.
 We look to these talks to help us become better communicators, contributors, mentors, and general humans.
 
-Rather than specifying themes, we’d like to share what we hope your talk would do for the audience.
+The theme of this year's conference is **"how coding can change your life"**. We are especially excited to accept talks like this. Do you have a good story? Come tell it!
 
 Your talk could:
 
@@ -49,33 +51,31 @@ Your talk could:
 ### Speaker Selection Process
 
 1.  You read through this Call for Proposals (reach out if you need help or have questions!) (required)
-1.  You submit a completed application by 04/11/2019 (required)
-1.  You submit a completed Community Assistance form by 04/11/2019 (optional, see “Financial Assistance” section)
-1.  We send out the first round of speaker acceptance emails by 04/30/2019
-1.  We send out the second round of speaker acceptance emails by 05/10/2019
-1.  You request feedback on your proposal by 06/05/2019 (optional)
-1.  We see you at the conference on 08/02/2019!
+1.  You submit a completed application by 03/15/2019 (required)
+1.  We send out speaker acceptance emails by 03/25/2019
+1.  We see you at the conference on 04/18/2019!
 
 ### Speaker Perks & Accommodations
 
-Speakers will receive a free admission to JS&Friends Conf.
+Speakers will receive a free admission to MagnoliaJS.
 
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
-but no later than 04/11/2019! A special need might include (but certainly isn’t limited to)
-an extra ticket for a spouse or caregiver,wheelchair access, reserved seating, ramps, etc.
-Please contact us at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
+but no later than 04/10/2019! A special need might include (but certainly isn’t limited to)
+an extra ticket for a spouse or caregiver, wheelchair access, reserved seating, ramps, etc.
+Please contact us at <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>.
 
 ### Financial Assistance
 
+Since we only had 10 weeks to plan this conference, funds are extremely tight.
 In order to keep admission prices as low as possible for our first year, we strongly encourage speakers
 to ask for travel assistance from employers. However, we acknowledge that this often results in a far less
 diverse group of speakers.
 
-If you will be unable to travel to and attend JS&Friends Conf without financial assistance,
-please contact <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>.
+If you will be unable to travel to and attend MagnoliaJS without financial assistance,
+please contact <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>.
 
 If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
-Contact <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a> for more info!
+Contact <a href="mailto:jc+magnoliajssponsor@jchiatt.com">jc+magnoliajssponsor@jchiatt.com</a> for more info!
 
 ### New Speakers!
 
@@ -85,8 +85,8 @@ in their <a href="http://www.codemash.org/call-speakers/" target="_blank" rel="n
 We specifically recommend the section entitled “How to write a good submission.”
 
 If you would like a human mentor, we can help connect you with a mentor.
-Please let us know at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
+Please let us know at <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>
 
-<a href="https://sessionize.com/javascript-and-friends-conference/" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
+<a href="#" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 
 </Card>
