--- a/src/pages/sponsor.mdx
+++ b/src/pages/sponsor.mdx
@@ -5,34 +5,10 @@ import sponsorImage from "./sponsor.png";
 
 <Card>
 
-## Interested in Sponsoring !!
+## Interested in Sponsoring?!
 
 <img src={sponsorImage} />
 
-We are a new volunteer-run developer conference coming to the Columbus, OH area with a focus on JavaScript based technologies.
-It's called the JavaScript and Friends Conference, and it's landing in the Columbus area on Friday, August 2, 2019!
-Our mission is to bring together a diverse group of around 200 JavaScript developers and friends to learn new skills and concepts
-and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
-and dynamic tech scene throughout the mid-west and beyond.
-
-Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the
-First Annual JavaScript and Friends Conference a success. And with your contribution, it will be!
-
-Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
-in bringing this about.
-
-<a href="https://1drv.ms/b/s!AqhcZadKop7eiy-K__Qs6ZmkqFVg" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
-
-### Where is my money going?
-
-Proceeds from JS&Friends will be used to help cultivate the developer community in the Midwestern United States and beyond.
-Since this is our first year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
-It could mean helping aspiring programmers through bootcamp scholarships.
-It could mean sponsoring local Meetup groups around JavaScript and related technologies.
-We’re excited about the possibilities, and we welcome your input!
-
-None of these sponsorship tiers fit your needs? Have more questions? Reach out to the Sponsorship team at <a href="mailto:sponsor@javascriptandfriends.com">sponsor@javascriptandfriends.com</a>.
-
-We can work together to come up with a custom sponsorship package that will work for you!
+Info coming soon!
 
 </Card>
