--- a/src/pages/volunteer.mdx
+++ b/src/pages/volunteer.mdx
@@ -4,8 +4,8 @@ import Card from "../components/Card";
 
 <Card>
 
-## MagnoliaJS - Vision
+## Volunteer
 
-Info coming soon
+Info coming soon!
 
 </Card>
