--- a/src/pages/speak.mdx
+++ b/src/pages/speak.mdx
@@ -87,6 +87,6 @@ We specifically recommend the section entitled “How to write a good submission
 If you would like a human mentor, we can help connect you with a mentor.
 Please let us know at <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>
 
-<a href="#" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
+<a href="https://magnoliajs.typeform.com/to/K3uoNF" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 
 </Card>
