add volunteering link

--- a/src/pages/volunteer.mdx
+++ b/src/pages/volunteer.mdx
@@ -6,6 +6,6 @@ import Card from "../components/Card";
 
 ## Volunteer
 
-Info coming soon!
+More info coming soon! But in the meantime, if you're interested in volunteering, please <a href="https://magnoliajs.typeform.com/to/FVzfUt" target="_blank" rel="noopener noreferrer">fill out our volunteer form here</a>.
 
 </Card>
