--- a/src/pages/vision.mdx
+++ b/src/pages/vision.mdx
@@ -4,24 +4,24 @@ import Card from "../components/Card";
 
 <Card>
 
-## JavaScript and Friends - Vision
+## MagnoliaJS - Vision
 
-### Who are we?
-
-The JavaScript and Friends Conference (JS&Friends) is a not-for-profit conference, organized by a team of volunteers.
-We are all active or aspiring software professionals, and we are excited to bring together a diverse group of JavaScript enthusiasts
-and friends to learn and network. With this conference, we want to contribute to the cultivation of a welcoming, inclusive, and
-dynamic tech scene throughout the midwestern United States, and beyond!
+A good start to the backstory behind this conference is <a href="https://twitter.com/jchiatt/status/1102361863067705344" target="_blank">this Twitter thread</a>.
 
 ### Who should attend?
 
-JS&Friends is for everyone. If you are interested in JavaScript or topics related to JavasScript, this conference is for you!
+MagnoliaJS is for everyone. If you are interested in JavaScript or other topics related to web development, this conference is for you!
 Whether you are a seasoned professional, a bootcamp or college student, a self-taught dev, or anywhere in between,
 this conference is for you!
 
+### Why won't the conference include XYZ topic?
+
+This is our first year, and we also only had **10 weeks to plan**. Given the timeframe, the organizers opted to plan a conference based on their own experience and connections.
+As we grow in attendance and diverse interests, we will certainly expand the scope of the conference and possibly even offer multiple tracks!
+
 ### Where is my money going?
 
-Proceeds from JS&Friends will be used to help cultivate the developer community in the Midwestern United States and beyond.
+Proceeds from MagnoliaJS will be used to help cultivate the developer community in Mississippi.
 Since this is our first year, this could mean putting the money into expanded speaker and attendee benefits and outreach for next year.
 It could mean helping aspiring programmers through bootcamp scholarships.
 It could mean sponsoring local Meetup groups around JavaScript and related technologies.
