fix typo on sponsor page

--- a/src/pages/sponsor.mdx
+++ b/src/pages/sponsor.mdx
@@ -14,7 +14,7 @@ We also happen to be Mississippi's first-ever developer conference!
 It's called the MagnoliaJS, and it's landing in the Jackson area on Thursday, April 18, 2019!
 Our mission is to bring together a diverse group of around 200 web developers and friends to learn new skills and concepts
 and to network and develop new relationships. With this conference, we want to contribute to the cultivation of a welcoming, inclusive,
-and dynamic tech scene throughout the Southeast and beyond, as well as give visitors a positve Mississippi experience to help foster growth in our local tech community.
+and dynamic tech scene throughout the Southeast and beyond, as well as give visitors a positive Mississippi experience to help foster growth in our local tech community.
 
 Here's your chance to contribute to that mission! We're looking for the best companies to partner with us and help to make the
 First Annual MagnoliaJS Conference a success. And with your contribution, it will be!
