replace CFP links with PaperCall link

--- a/src/pages/speak.mdx
+++ b/src/pages/speak.mdx
@@ -17,13 +17,13 @@ You! We welcome speakers of all experience levels and backgrounds.
 Your technical AND non-technical experience is valuable to the community!
 There is no limit on the number of proposals you can submit.
 
-We are prioritizing first-time conference speakers this year. It's our first time to plan a conference, so let it be your first time to speak!
+We are **prioritizing first-time conference speakers this year** (though anyone can apply!). It's our first time to plan a conference, so let it be your first time to speak!
 
 ### Format
 
 Sessions: 25 minutes long, with no Q&A after. Be sure to let the audience know during your talk if you will be available at another time that day to answer questions!
 
-Workshops: If you are interested in giving a workshop, please contact us via <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>
+Workshops: If you are interested in giving a workshop, please contact us via <a href="mailto:jc+magnoliajs@jchiatt.com">jc@jchiatt.com</a>
 
 ### Themes and Levels of Expertise
 
@@ -62,7 +62,7 @@ Speakers will receive a free admission to MagnoliaJS.
 If you have any special needs or circumstances we should know about, please contact us as early as possible,
 but no later than 04/10/2019! A special need might include (but certainly isn’t limited to)
 an extra ticket for a spouse or caregiver, wheelchair access, reserved seating, ramps, etc.
-Please contact us at <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>.
+Please contact us at <a href="mailto:jc+magnoliajs@jchiatt.com">jc@jchiatt.com</a>.
 
 ### Financial Assistance
 
@@ -72,10 +72,10 @@ to ask for travel assistance from employers. However, we acknowledge that this o
 diverse group of speakers.
 
 If you will be unable to travel to and attend MagnoliaJS without financial assistance,
-please contact <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>.
+please contact <a href="mailto:jc+magnoliajs@jchiatt.com">jc@jchiatt.com</a>.
 
 If you or your company would like to sponsor a speaker’s travel, we have a sponsorship level for that!
-Contact <a href="mailto:jc+magnoliajssponsor@jchiatt.com">jc+magnoliajssponsor@jchiatt.com</a> for more info!
+Contact <a href="mailto:jc+magnoliajssponsor@jchiatt.com">jc@jchiatt.com</a> for more info!
 
 ### New Speakers!
 
@@ -85,8 +85,8 @@ in their <a href="http://www.codemash.org/call-speakers/" target="_blank" rel="n
 We specifically recommend the section entitled “How to write a good submission.”
 
 If you would like a human mentor, we can help connect you with a mentor.
-Please let us know at <a href="mailto:jc+magnoliajs@jchiatt.com">jc+magnoliajs@jchiatt.com</a>
+Please let us know at <a href="mailto:jc+magnoliajs@jchiatt.com">jc@jchiatt.com</a>
 
-<a href="https://magnoliajs.typeform.com/to/K3uoNF" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
+<a href="https://www.papercall.io/magnoliajs" target="_blank" rel="noopener noreferrer">Submit Proposals</a>
 
 </Card>
