add contact to code of conduct

--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -30,4 +30,8 @@ We expect participants to follow these rules at conference and workshop venues a
 
 This Code of Conduct is borrowed from [Conference Code of Conduct](http://confcodeofconduct.com/).
 
+### Report an Issue
+
+If you encounter any problems, report them to [J.C. Hiatt](mailto:jc@jchiatt.com) or tell a volunteer at the event.
+
 </Card>
