--- a/src/pages/codeofconduct.mdx
+++ b/src/pages/codeofconduct.mdx
@@ -108,11 +108,11 @@ reserve the right to reject any report we believe to have been made in bad faith
 ### What sources did you use for this Code of Conduct?
 
 For much of this document, we remixed GeekFeminism’s
-<a href="https://geekfeminism.org/about/code-of-conduct/">Code of Conduct</a> and
-<a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy">Code of Conduct for conferences</a>.
-We drew inspiration from <a href="https://www.afrotechfest.co.uk/coc/">Afrotech Fest 2019</a>,
-<a href="https://codeandsupply.co/policies/conduct">Code & Supply</a>, and
-<a href="http://confcodeofconduct.com/">Conference Code of Conduct.</a>
+<a href="https://geekfeminism.org/about/code-of-conduct/" target="_blank" rel="noopener noreferrer">Code of Conduct</a> and
+<a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy" target="_blank" rel="noopener noreferrer">Code of Conduct for conferences</a>.
+We drew inspiration from <a href="https://www.afrotechfest.co.uk/coc/" target="_blank" rel="noopener noreferrer">Afrotech Fest 2019</a>,
+<a href="https://codeandsupply.co/policies/conduct" target="_blank" rel="noopener noreferrer">Code & Supply</a>, and
+<a href="http://confcodeofconduct.com/" target="_blank" rel="noopener noreferrer">Conference Code of Conduct.</a>
 
 Any changes to code of conduct will be updated by event organizers.
 
