--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,15 +7,15 @@ import Text from "../components/Text";
 
 ## Community Events
 
-Click on the links to RSVP for our April Events
+Click on the links to RSVP for our May Events
 
-<Text my={20}>04.09.2019 <a href="https://www.eventbrite.com/e/javascript-and-friends-community-programs-kick-off-tickets-58877616536" target="_blank">JavaScript and Friends Community Programs Kick Off Event</a></Text>
-
-
-<Text my={20}>04.18.2019 <a href="https://www.eventbrite.com/e/javascript-and-friends-angular-study-group-tickets-58829919874" target="_blank">JavaScript and Friends Angular Study Group</a></Text>
+<Text my={20}>05.14.2019 <a href="https://www.eventbrite.com/e/get-to-know-all-about-progressive-web-applications-tickets-60485201867" target="_blank">Get to know all about Progressive Web Applications</a></Text>
 
 
-<Text my={20}>04.24.2019 <a href="https://www.meetup.com/Vue-Columbus/events/dmlsqqyzgbgc/" target="_blank">Realtime GraphQL and Serverless made easy for Vue with Hasura</a></Text>
+<Text my={20}>05.16.2019 <a href="https://www.eventbrite.com/e/javascript-and-friends-angular-study-group-tickets-59415249611" target="_blank">JavaScript and Friends Angular Study Group</a></Text>
+
+
+<Text my={20}>05.22.2019 <a href="https://www.meetup.com/Vue-Columbus/events/261141310/" target="_blank"> VueJs Columbus Meetup To be Updated</a></Text>
 
 
 Interested in speaking at our community events reach out to us 
