--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -122,12 +122,12 @@ company=""
 bio="Father of 6, Full stack dev and travel hacker I am a full-stack dev and father of 6 from Cincinnati Ohio. Some have called me the most interesting man in the world. Some uncommon things about me - * have 20 years of full-stack developer experience (most recently in React,Redux and Spring Boot)* have 6 kids* speak English and Spanish (lived 2 years in the Dominican Republic as a 19 year old)* have been on Wheel of Fortune (I finished 2nd and won $5800 for 20 minutes of work)* hold world records for the fastest time to jump in all 5 Great Lakes as well as fastest time to visit all 88 counties of Ohio* was featured on the CBS Sunday Morning show * ran a fantasy sports website with over 20,000 participants* am trying to visit all 3,143 counties in the United States (I am about 62% done)* run a travel hacking blog with over 500,000 monthly pageviews* have over 40 credit cards"
  />
 
-<Speaker name="'Tine Jekis" Image={christineImage} talk={{ title: "Curriculum to Command Line: Why Teachers Make Awesome Coders, and What Your Team Can Learn from Them", 
+<Speaker name="'Tine Zekis" Image={christineImage} talk={{ title: "Curriculum to Command Line: Why Teachers Make Awesome Coders, and What Your Team Can Learn from Them", 
 description: "Perhaps you have heard the oft-quoted statistic that teachers make 1500 decisions per day in their classrooms. How do they do that? Dont you think a mind with that kind of training would be great at writing algorithms and defining edge cases? Well, it turns out that they are! Find out why former educators make awesome coders, communicators, teammates, and leaders. And, perhaps more importantly, learn what your teams can do to hone those same skills." }} 
 twitter="tinezekis" 
 linkedin="tinezekis" 
 company="Centro" 
-bio="Christine (\'Tine) Zekis is an educator-turned-developer working as a Software Engineer in Chicago. She champions Diversity, Equity, and Inclusion in tech, while delivering clean, well-tested code. She aspires to mentor and sponsor other career changers, especially those who are underrepresented in the industry. In her spare time...just kidding: \'Tine has a one-year-old daughter and no spare time."
+bio="Christine ('Tine) Zekis is an educator-turned-developer working as a Software Engineer in Chicago. She champions Diversity, Equity, and Inclusion in tech, while delivering clean, well-tested code. She aspires to mentor and sponsor other career changers, especially those who are underrepresented in the industry. In her spare time...just kidding: 'Tine has a one-year-old daughter and no spare time."
  />
 
 <Speaker name="Dustin Hershman" Image={dustinImage} talk={{ title: "Building your First gRPC Service in Node.js", 
@@ -281,7 +281,7 @@ bio="Trezy is in the consulting arena and he has been helping tech startups get 
 description: "Functional Programming, Monads, Immutability, Type Level Safety and all this good stuff are features easy to find in some programming languages (such as Scala, Elm, PureScript) but they often get ignored or simply living with the conception that these cannot be applied Javascript. Let us demystify this and learn with practical examples (ranging from the frontend to the backend) how Typescripts type system is flexible enough to employ different typical pattern that you would easily find in other programming languages, analyzing their benefits and limitations." }} 
 twitter="D3DVincent" 
 linkedin="vncz" 
-company="Express Gateway" 
+company="Stoplight" 
 bio="Vincenzo Chianese is an Italian Software Developer focused on WebAPIs and User Interfaces.He is an Auth0 Ambassador.He has been working for the last years in API Companies such as Apiary, Oracle, LunchBadger; currently he is working for Stoplight. He is also a prolific speaker and always willing to fly for a conference . In his spare time, he maintains different open source projects, including Express Gateway, an open source API Gateway written in Javascript and running on NodeJS."
  />
 ###### Speakers subject to change.######
