Quick updates for speakers page

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -35,8 +35,9 @@ import dimitryImage from "../components/SpeakerImages/dimitry";
 import chrisHollandImage from "../components/SpeakerImages/chrisholland";
 import margeauxImage from "../components/SpeakerImages/margeaux";
 import vinceImage from "../components/SpeakerImages/vince";
+import { Hidden } from '../components/Hidden';
 
-
+<Hidden as="h1">Speakers</Hidden>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 
 <Speaker name="Alison Falk" Image={alisonfalkImage} talk={{ title: "Sextech- A Valid and Important Technical Field", 
